--- a/app/index.html
+++ b/app/index.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Life Tissue</title>
+    <link rel="stylesheet" href="./assets/styles/css/styles.css">
+</head>
+
+<body>
+
+    <header class="header">
+        <div class="wrapper wrapper--space-between">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Tesla_T_symbol.svg/771px-Tesla_T_symbol.svg.png" width="70"
+                alt="logo" class="header__logo">
+            <nav>
+                <ul class="header__nav font-header font-20 font-semi-bold">
+                    <li class="header__nav__tab">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="header__nav__tab">
+                        <a href="#">About</a>
+                    </li>
+                    <li class="header__nav__tab">
+                        <a href="#">Products</a>
+                    </li>
+                    <li class="header__nav__tab">
+                        <a href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="hero">
+            <div class="hero__blur"></div>
+            <div class="hero__content font-header font-bold">
+                <h2 class="font-76">Welcome</h2>
+                <h2 class="font-36">to the new life</h2>
+            </div>
+        </div>
+        <section class="section about">
+            <div class="wrapper">
+
+            </div>
+        </section>
+        <section class="section products">
+            <div class="wrapper">
+
+            </div>
+        </section>
+        <section class="section contact-us">
+            <div class="wrapper">
+
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="wrapper wrapper--space-between">
+            <span class="footer__caption font-bold font-header">Copyright © 2018 Life Tissues Factory All rights reserved</span>
+            <ul class="footer__icons">
+                <li class="footer__icon">
+                    <img src="./assets/images/facebook-logo.svg" width="35" height="35">
+                </li>
+                <li class="footer__icon">
+                    <img src="./assets/images/facebook-logo.svg" width="35" height="35">
+                </li>
+                <li class="footer__icon">
+                    <img src="./assets/images/facebook-logo.svg" width="35" height="35">
+                </li>
+                <li class="footer__icon">
+                    <img src="./assets/images/facebook-logo.svg" width="35" height="35">
+                </li>
+                <li class="footer__icon">
+                    <img src="./assets/images/facebook-logo.svg" width="35" height="35">
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <script src="./assets/scripts/app.js"></script>
+</body>
+
+</html>
