--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,7 @@
 
     <header class="header">
         <div class="wrapper wrapper--space-between">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Tesla_T_symbol.svg/771px-Tesla_T_symbol.svg.png" width="70"
-                alt="logo" class="header__logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Tesla_T_symbol.svg/771px-Tesla_T_symbol.svg.png" width="70" alt="logo" class="header__logo">
             <nav>
                 <ul class="header__nav font-header font-20 font-semi-bold">
                     <li class="header__nav__tab">
@@ -39,15 +38,28 @@
                 <h2 class="font-76">Welcome</h2>
                 <h2 class="font-36">to the new life</h2>
             </div>
+            <div class="separator">
+                <svg id="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60" viewBox="0 0 100 100" preserveAspectRatio="none">
+                    <path d="M0 100 C 20 0 50 0 100 100 Z" />
+                </svg>
+            </div>
         </div>
         <section class="section about">
             <div class="wrapper">
-
+                <h2 class="about__title font-header font-bold font-42">About Us</h2>
+                <p class="about__content font-content font-20 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laudantium exercitationem dicta adipisci sapiente enim autem quidem minima, tenetur nobis at quaerat doloremque non dignissimos itaque nemo nisi? Natus, atque.</p>
             </div>
         </section>
-        <section class="section products">
+        <section class="section section--alt products">
             <div class="wrapper">
-
+                <div class="products__grid">
+                    <div class="products__item">basd</div>
+                    <div class="products__item">sdga</div>
+                    <div class="products__item">asdfg</div>
+                    <div class="products__item">asdf</div>
+                    <div class="products__item">asdf</div>
+                    <div class="products__item">asdf</div>
+                </div>
             </div>
         </section>
         <section class="section contact-us">
