move contact-us css to sass

--- a/app/index.html
+++ b/app/index.html
@@ -102,41 +102,41 @@
                         <div id="map" style="width:100%;height:362px"></div>
                     </div>
                     <form class="contact-us__form">
-                        <div class="container">
+                        <div class="contact-us__form-container">
                             <form action="/action_page.php">
-                                <div class="row">
-                                    <div class="input-title">
+                                <div class="contact-us__row">
+                                    <div class="contact-us__input-title">
                                         <label for="name">Name</label>
                                     </div>
-                                    <div class="input-place">
+                                    <div class="contact-us__input-place">
                                         <input type="text" id="name" name="name" placeholder="Your name..">
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="input-title">
+                                <div class="contact-us__row">
+                                    <div class="contact-us__input-title">
                                         <label for="email">Email</label>
                                     </div>
-                                    <div class="input-place">
+                                    <div class="contact-us__input-place">
                                         <input type="text" id="email" name="email" placeholder="Your email..">
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="input-title">
+                                <div class="contact-us__row">
+                                    <div class="contact-us__input-title">
                                         <label for="subject">Subject</label>
                                     </div>
-                                    <div class="input-place">
+                                    <div class="contact-us__input-place">
                                         <input type="text" id="subject" name="subject" placeholder="Your subject..">
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="input-title">
+                                <div class="contact-us__row">
+                                    <div class="contact-us__input-title">
                                         <label for="message">Message</label>
                                     </div>
-                                    <div class="input-place">
+                                    <div class="contact-us__input-place">
                                         <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="contact-us__row">
                                     <input type="submit" value="Submit">
                                 </div>
                             </form>
