--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Life Tissue</title>
     <link rel="stylesheet" href="./assets/styles/css/styles.css">
     <link rel="stylesheet" href="../node_modules/swiper/dist/css/swiper.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body id="body">
@@ -253,7 +254,29 @@
     <footer class="footer">
         <div class="wrapper wrapper--space-between">
             <span class="footer__caption font-bold font-header">Copyright © 2018 Life Tissues Factory All rights reserved</span>
-            <ul class="footer__icons">
+            <div class="social-icons">
+                <a class="social-icon social-icon--facebook" href="https://www.facebook.com/">
+                    <i class="fa fa-facebook"></i>
+                    <div class="tooltip">Facebook</div>
+                </a>
+                <a class="social-icon social-icon--twitter" href="https://www.twitter.com">
+                    <i class="fa fa-twitter"></i>
+                    <div class="tooltip">Twitter</div>
+                </a>
+                <a class="social-icon social-icon--instagram" href="https://www.Instagram.com">
+                    <i class="fa fa-instagram"></i>
+                    <div class="tooltip">Instagram</div>
+                </a>
+                <a class="social-icon social-icon--dribbble" href="https://www.Dribbble.com">
+                    <i class="fa fa-dribbble"></i>
+                    <div class="tooltip">Dribbble</div>
+                </a>
+                <a class="social-icon social-icon--linkedin" href="https://www.LinkedIn.com">
+                    <i class="fa fa-linkedin"></i>
+                    <div class="tooltip">LinkedIn</div>
+                </a>
+            </div>
+            <!-- <ul class="footer__icons">
                 <li class="footer__icon">
                     <a href="https://www.facebook.com/Company-ELNile-367149003386066/">
                         <img src="./assets/images/facebook-logo.svg" width="35" height="35">
@@ -279,7 +302,7 @@
                         <img src="./assets/images/facebook-logo.svg" width="35" height="35">
                     </a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
     </footer>
     <div class="modal">
